# tp3a_speedmm

./: .gitignore  CMakeLists.txt  Makefile.search
notes/: O1-opts.txt  O2-opts.txt  O3-opts.txt  block_output_example.txt  intel_optimizations.txt  output.txt  papi_avail.txt  papi_env.txt  requirements.txt
scripts/: compile_env.sh  debug_papi.sh  generate_input_data.sh  generate_test_data.sh  intel_env.sh  papi_env.sh  reserve_mei_1h30.sh  run_batch.sh  run_env.sh  set_env.sh  setup.sh  simple_run.sh  test_block.sh
scripts/env/: batch_env.sh  clear_env.sh  debug_env.sh  main_env.sh  omp_env.sh  one_block.sh  one_block_no_omp.sh  one_block_no_papi.sh  one_env.sh  one_two_env.sh  range_blocks.sh  simple_env.sh  thread_block_no_papi.sh  vector_env.sh
src/: csvhelper.c  csvhelper.h  local_papi.h  local_papi_stubs.h  matrix.c  matrix.h  matrix_block_impl.c  matrix_config.h  matrix_oml_impl.c  matrix_omp_impl.c  matrix_simple_impl.c  matrix_support.c  matrix_support.h  matrix_types.h  matrix_vector_impl.c  papi_support.h  papi_support_base.h
test/: heap_matrix_test.c  papi_test.c  papivi_local.h
